--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/webaverse/editaverse.git"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --port 443",
     "start-moz": "cross-env IS_MOZ=true NODE_ENV=development webpack-dev-server --mode development",
     "run-local-reticulum": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 ROUTER_BASE_PATH=/spoke BASE_ASSETS_PATH=https://hubs.local:9090/ HUBS_SERVER=hubs.local:4000 RETICULUM_SERVER=hubs.local:4000 yarn start",
     "build": "cross-env NODE_ENV=production webpack --mode production && cp ./dist/index.html ./dist/404.html",
